@startuml
title AgroTracker MVP - DER Final Homologado

skinparam shadowing false
skinparam backgroundColor white

skinparam entity {
    BackgroundColor #F8FFF8
    BorderColor #2E7D32
    FontColor #243127
}

entity "Usuario" as User {
  * id : string <<PK>>
  --
  nome : string
  email : string
  passwordHash : string
  ativo : boolean
  roles : string[]
  createdAt : Date
  updatedAt : Date
}

entity "Sessao" as Session {
  * token : string <<PK>>
  --
  userId : string <<FK>>
  createdAt : Date
}

entity "Fazenda" as Fazenda {
  * id : string <<PK>>
  --
  nome : string
  localizacao : string
}

entity "Animal" as Animal {
  * id : string <<PK>>
  --
  fazendaId : string <<FK>>
  codigoIdentificacao : string
  nome : string?
  raca : string
  peso : number
  dataNascimento : Date
  status : StatusAnimal
  dataCriacao : Date
}

entity "Evento" as Evento {
  * id : string <<PK>>
  --
  animalId : string <<FK>>
  fazendaId : string <<FK>>
  type : EventType
  description : string
  date : Date
  createdBy : string <<FK>>
  createdAt : Date
}

entity "FazendaMember" as Member {
  * id : string <<PK>>
  --
  fazendaId : string <<FK>>
  userId : string <<FK>>
  role : MemberRole
  active : boolean
  createdAt : Date
}

entity "Convite" as Invite {
  * id : string <<PK>>
  --
  fazendaId : string <<FK>>
  email : string
  role : MemberRole
  token : string
  status : InviteStatus
  createdAt : Date
}

' =========================
' RELACIONAMENTOS
' =========================

User ||--o{ Session : possui

User ||--o{ Member : participa
Fazenda ||--o{ Member : membros

Fazenda ||--o{ Animal : possui

Animal ||--o{ Evento : historico

Fazenda ||--o{ Evento : manejos

User ||--o{ Evento : criou

Fazenda ||--o{ Invite : convites

' =========================
' OBSERVAÇÃO
' =========================

note bottom
As chaves estrangeiras representam
referências lógicas validadas pela aplicação.

O AgroTracker MVP utiliza persistência
em arquivos JSON, não banco relacional.
end note

@enduml
